[package]
name = "aetherus-events"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "^0.4.*"
num_enum = "^0.7.*"
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.145"
serde_with = { version = "3.16.1", features = ["json"] }

[dev-dependencies]
tempfile = "3.23.0"

[[bin]]
name = "filter_target"
