[package]
name = "aetherus-events"
version = "0.1.2"
edition = "2024"

[dependencies]
array-bytes = { version = "9.3.0", features = ["serde"] }
csv = "^1.4.0"
log = "^0.4.*"
num_enum = "^0.7.*"
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.145"
serde_with = { version = "3.16.1", features = ["json"] }

[dev-dependencies]
tempfile = "3.23.0"

[[bin]]
name = "filter_target"
